// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot with label, icon and to props 1`] = `
<a
  class="Anchor_root__1pk80wh0 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_link__w6to7id reset_cursorPointer__6swfds1 reset_a__6swfds9 useBoxStyles_display_inline__7o6k06e0"
  href="https://www.autoguru.com.au"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dy useBoxStyles_position_relative__7o6k06do useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ei useBoxStyles_flexWrap_wrap__7o6k06f1 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq4"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06dy useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ei useBoxStyles_flexWrap_nowrap__7o6k06f2"
    >
      <i
        class="useBoxStyles_display_block__7o6k06dx Icon_makeResponsiveStyle_key_bp__14sz1q60 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_link__w6to7id"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06dx useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dl"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06dy useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ei useBoxStyles_flexWrap_nowrap__7o6k06f2"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06dp useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_link__w6to7id useTextStyles_fontWeight_bold__w6to7ip useTextStyles_sizes_4__w6to7i4"
      >
        Hello World!
      </span>
    </div>
  </div>
</a>
`;

exports[`<Anchor /> should match snapshot without label 1`] = `
<a
  class="Anchor_root__1pk80wh0 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_link__w6to7id reset_cursorPointer__6swfds1 reset_a__6swfds9 useBoxStyles_display_inline__7o6k06e0"
>
  <span
    class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06dp useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_link__w6to7id useTextStyles_fontWeight_bold__w6to7ip useTextStyles_sizes_4__w6to7i4"
  />
</a>
`;

exports[`<Anchor /> when custom component should match snapshot with label, icon custom component 1`] = `
<button
  class="reset_appearance__6swfds0 reset_cursorPointer__6swfds1 reset_trimmedBlockElement__6swfds5 reset_button__6swfds6 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061g useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_inlineBlock__7o6k06e1 useBoxStyles_overflow_hidden__7o6k06ds useBoxStyles_textAlign_center__7o6k06dq useBoxStyles_border_style__7o6k069k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06a9 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ap useBoxStyles_makeResponsiveStyle_key_bp__7o6k06b5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_white__w6to7if useTextStyles_fontWeight_semiBold__w6to7io useTextStyles_sizes_4__w6to7i4 Button_root__11v3fwx0 Button_defaultStates_secondary__11v3fwxg Button_variant_secondary__11v3fwxd Button_size_medium_default__11v3fwx9 Button_enabled__11v3fwx3 Anchor_root__1pk80wh0 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_link__w6to7id reset_block__6swfds3 useBoxStyles_display_inline__7o6k06e0"
  type="button"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_height_full__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 Button_body__11v3fwx1"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dy useBoxStyles_position_relative__7o6k06do useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ei useBoxStyles_flexWrap_wrap__7o6k06f1 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq4"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06dy useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ei useBoxStyles_flexWrap_nowrap__7o6k06f2"
      >
        <i
          class="useBoxStyles_display_block__7o6k06dx Icon_makeResponsiveStyle_key_bp__14sz1q60 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_link__w6to7id"
          role="presentation"
        >
          <svg
            class="useBoxStyles_display_block__7o6k06dx useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dl"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06dy useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ei useBoxStyles_flexWrap_nowrap__7o6k06f2"
      >
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06dp useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_link__w6to7id useTextStyles_fontWeight_bold__w6to7ip useTextStyles_sizes_4__w6to7i4"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</button>
`;
